duniverse/menhirLib.20200211/test/static/bad/no-start-and-inline.mly
%start<int> a
%%

%inline a: {}
