duniverse/menhirLib.20200211/test/static/bad/no-start-and-inline.exp
File "no-start-and-inline.mly", line 4, characters 8-9:
Error: a cannot be both a start symbol and inlined.
